para continuar en el portatil
